<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PeopleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeopleCount"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/rvPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btLoadPeople"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <Button
        android:id="@+id/btLoadPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="26dp"
        android:text="@string/load"
        app:layout_constraintBottom_toTopOf="@+id/rvPeople"
        app:layout_constraintEnd_toStartOf="@+id/etPeopleCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPeople"
        android:layout_width="409dp"
        android:layout_height="585dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeopleCount" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="35dp"
        android:text="@string/result"
        app:layout_constraintEnd_toStartOf="@+id/etPeopleCount"
        app:layout_constraintStart_toEndOf="@+id/btLoadPeople"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
</androidx.constraintlayout.widget.ConstraintLayout>